# exblas

./: CMakeLists.txt  LICENSE  README  README.md
DDOT.Round/: README
DDOT.Round/scripts/: plot.py  range_nvidia.plot  run.InputRange.VS.GBs.sh
DDOT.Round/src/: DDOT.FPE.EX.4.cl  DDOT.FPE.EX.6.cl  DDOT.FPE.EX.8.cl  DDOT.FPE.cl  DDOT.Launcher.cpp  DDOT.Superacc.cl  DDOT.cl  DDOT.cpp  DDOT.hpp  Makefile  Superaccumulator.hpp  common.cpp  common.hpp  main.cpp
DDOT/scripts/: plot.py  range_amd.plot  range_nvidia.plot  run.InputRange.VS.GBs.sh  run.NbElements.VS.GBs.sh
DDOT/src/: DDOT.FPE.EX.4.cl  DDOT.FPE.EX.6.cl  DDOT.FPE.EX.8.cl  DDOT.FPE.EX.cl  DDOT.FPE.cl  DDOT.Launcher.cpp  DDOT.Launcher.cpp.bak  DDOT.Simple.Launcher.cpp  DDOT.Simple.cl  DDOT.Standard.Launcher.cpp  DDOT.Standard.cl  DDOT.Superacc.cl  DDOT.cpp  Makefile  Makefile.amd  Makefile.nvidia  Superaccumulator.cpp  Superaccumulator.hpp  common.cpp  common.hpp  main.cpp  mylibm.hpp
DGEMM/: LICENSE  README
DGEMM.Matsumoto/: LICENSE  Makefile  Makefile.in  README
DGEMM.Matsumoto/benchmark/: Makefile  Makefile.in  Makefile.in.acml  Makefile.in.mkl  (+9 more)
TRSV/: LICENSE  README  trsv_sym.m
cmake/: config.h.in
doc/: Doxyfile.in
example/: CMakeLists.txt  test.cpp
include/: blas1.hpp  blas2.hpp  blas3.hpp  common.hpp
results/: exdot.gops.amd.15.09.24.new.superacc.no.flush.pa768.txt  exdot.gops.amd.15.09.24.new.superacc.no.r.no.flush.pa768.txt  exdot.gops.amd.15.09.24.new.superacc.no.r.pa1536.txt  exdot.gops.amd.15.09.24.new.superacc.no.r.pa768.txt  exdot.gops.amd.15.09.24.new.superacc.pa768.txt  exdot.gops.amd.15.09.24.no.yes.no.long.pa768.txt  exdot.gops.amd.15.09.24.no.yes.yes.long.pa768.txt  exdot.gops.amd.15.09.24.pa1024.txt  exdot.gops.amd.15.09.24.txt  exdot.gops.amd.15.09.24.yes.yes.no.long.pa768.txt  exdot.gops.amd.15.09.24.yes.yes.yes.long.pa768.txt  exdot.gops.amd.15.09.25.pa768.txt  exdot.gops.k20c.15.09.24.new.superacc.no.flush.pa512.txt  exdot.gops.k20c.15.09.24.new.superacc.no.r.no.flush.pa512.txt  exdot.gops.k20c.15.09.24.new.superacc.no.r.pa512.txt  exdot.gops.k20c.15.09.24.new.superacc.no.r.pa768.txt  exdot.gops.k20c.15.09.24.new.superacc.pa768.txt  exdot.gops.k20c.15.09.24.no.yes.no.long.pa512.txt  exdot.gops.k20c.15.09.24.no.yes.yes.long.pa512.txt  exdot.gops.k20c.15.09.24.pa1024.txt  exdot.gops.k20c.15.09.24.txt  exdot.gops.k20c.15.09.24.yes.yes.no.long.pa512.txt  exdot.gops.k20c.15.09.24.yes.yes.yes.long.pa512.txt  exdot.gops.k20c.15.09.25.pa512.txt  exgemm.gops.amd.15.09.14.1.txt  exgemm.gops.amd.15.09.16.flush.no.r.short.txt  exgemm.gops.amd.15.09.16.flush.no.r.txt  exgemm.gops.amd.15.09.16.no.r.no.flush.2fpe.txt  exgemm.gops.amd.15.09.16.no.r.txt  exgemm.gops.amd.15.09.16.r.no.flush.txt  exgemm.gops.amd.15.09.16.txt  exgemm.gops.amd.15.09.18.no.no.no.no.txt  exgemm.gops.amd.15.09.18.no.no.yes.no.txt  exgemm.gops.amd.15.09.18.yes.no.no.no.txt  exgemm.gops.amd.15.09.18.yes.no.yes.no.txt  exgemm.gops.amd.15.09.18.yes.no.yes.yes.txt  exgemm.gops.amd.15.09.18.yes.yes.yes.no.txt  exgemm.gops.amd.15.09.18.yes.yes.yes.yes.txt  exgemm.gops.amd.15.09.19.short.yes.no.yes.no.txt  exgemm.gops.amd.15.09.19.short.yes.no.yes.yes.txt  (+66 more)
script/: jobs.gops.sh  jobs.np1.demmel.sh  jobs.np1.sh  range_mic.plot  run_bench.sh  run_range.sh
scripts/: gops_gemm.plot  gops_gemm_amd.plot  gops_gemm_k20c.plot  gops_mesu.plot  gops_mic.plot  gops_mic_orig.plot  jobs.gops.sh  jobs.range.sh  plot.dot.gpu.py  plot.sum.gpu.amd.py  plot.sum.gpu.py  range_mic.plot  run.NbElements.VS.GBs.nvidia.sh  run_bench_dot_gpu.sh  run_bench_gemm.sh  run_bench_sum.sh  run_bench_sum_gpu.sh  run_bench_trsv.sh  run_range_sum.sh
src/: CMakeLists.txt
src/common/: common.cpp
src/cpu/: CMakeLists.txt  mylibm.hpp
src/cpu/blas1/: CMakeLists.txt  ExSUM.FPE.hpp  ExSUM.cpp  ExSUM.hpp  dsum.cpp  dsum.hpp  fpexpansionvect.hpp  mylibm.hpp  superaccumulator.cpp  superaccumulator.hpp
src/gpu/: CMakeLists.txt  Reduction.FPE.EX.4.cl  Reduction.FPE.EX.8.cl  Reduction.FPE.cl  common.gpu.cpp  common.gpu.hpp
src/gpu/blas1/: CMakeLists.txt  ExDOT.FPE.EX.4.cl  ExDOT.FPE.EX.6.cl  ExDOT.FPE.EX.8.cl  ExDOT.FPE.cl  ExDOT.Launcher.cpp  ExDOT.Launcher.hpp  ExDOT.Superacc.cl  ExDOT.cpp  ExSUM.FPE.EX.4.cl  ExSUM.FPE.EX.6.cl  ExSUM.FPE.EX.8.cl  ExSUM.FPE.cl  ExSUM.Launcher.cpp  ExSUM.Launcher.hpp  ExSUM.Superacc.cl  ExSUM.Superacc.mix.cl  ExSUM.Superacc.new.cl  ExSUM.Superacc.norm.cl  ExSUM.Superacc.try.cl  ExSUM.cpp  ExSUM.hpp  Reduction.FPE.EX.6.cl  Reduction.Launcher.cpp  Reduction.Launcher.hpp  Reduction.Superacc.cl  dsum.cpp  dsum.hpp
src/gpu/blas2/: CMakeLists.txt  DGEMV.cl  DTRSV.lnn.cl  DTRSV.unn.cl  ExGEMV.FPE.EX.4.cl  ExGEMV.FPE.EX.6.cl  ExGEMV.FPE.EX.8.cl  ExGEMV.FPE.cl  ExGEMV.Launcher.cpp  ExGEMV.Launcher.hpp  ExGEMV.Superacc.cl  ExGEMV.cpp  ExTRSV.FPE.EX.4.cl  ExTRSV.FPE.EX.6.cl  ExTRSV.FPE.EX.8.cl  ExTRSV.FPE.IR.Double.cl  ExTRSV.FPE.IR.cl  ExTRSV.FPE.IR.cl.bak  ExTRSV.FPE.IR.simple.cl  ExTRSV.FPE.cl  ExTRSV.Launcher.cpp  ExTRSV.Launcher.hpp  ExTRSV.Superacc.cl  ExTRSV.cpp  ExTRSV.lnn.FPE.EX.4.cl  ExTRSV.lnn.FPE.EX.6.cl  ExTRSV.lnn.FPE.EX.8.cl  ExTRSV.lnn.FPE.IR.cl  ExTRSV.lnn.FPE.cl  ExTRSV.lnn.Superacc.cl  ExTRSV.unn.FPE.EX.4.cl  ExTRSV.unn.FPE.EX.6.cl  ExTRSV.unn.FPE.EX.8.cl  ExTRSV.unn.FPE.IR.cl  ExTRSV.unn.FPE.cl  ExTRSV.unn.Superacc.cl
src/gpu/blas3/: CMakeLists.txt  ExGEMM.FPE.EX.4.cl  ExGEMM.FPE.EX.6.cl  ExGEMM.FPE.EX.8.cl  ExGEMM.FPE.cl  ExGEMM.Launcher.cpp  ExGEMM.Launcher.hpp  ExGEMM.Superacc.cl  ExGEMM.cpp  ExGEMM.hpp
src/mic/: CMakeLists.txt  dsum.hpp  fpexpansionmic.hpp  superaccumulator.cpp
src/mic/blas1/: CMakeLists.txt  ExSUM.FPE.hpp  ExSUM.MIC.hpp  ExSUM.cpp  ExSUM.hpp  dsum.cpp  fplargebasemic.hpp  mylibm.hpp  superaccumulator.cpp  superaccumulator.hpp  vectorf512.h  vectori512.h
tests/: test.exdot.gpu.cpp  test.exgemm.gpu.cpp  test.exgemv.gpu.cpp  test.exsum.cpu.cpp  test.exsum.gpu.cpp  test.exsum.mic.cpp  test.extrsv.gpu.cpp  test.sum.cpu.cpp  test.sum.gpu.cpp
trsv.test/: Makefile  Makefile.laptop  Superaccumulator.cpp  Superaccumulator.hpp  TRSV.cpp  TRSV.hpp  common.cpp  common.hpp  main.cpp  mylibm.h  mylibm.hpp
(+185 files in other folders)
